--- a/qrgui/hotKeyManager/hotKeyManagerPage.ui
+++ b/qrgui/hotKeyManager/hotKeyManagerPage.ui
@@ -53,7 +53,7 @@
          <bool>true</bool>
         </property>
         <property name="focusPolicy">
-         <enum>Qt::ClickFocus</enum>
+         <enum>Qt::WheelFocus</enum>
         </property>
         <property name="editTriggers">
          <set>QAbstractItemView::NoEditTriggers</set>
