--- a/plugins/robots/robotsInterpreter/details/d2RobotModel/d2Form.ui
+++ b/plugins/robots/robotsInterpreter/details/d2RobotModel/d2Form.ui
@@ -93,6 +93,9 @@ p, li { white-space: pre-wrap; }
      <property name="contextMenuPolicy">
       <enum>Qt::NoContextMenu</enum>
      </property>
+     <property name="toolTip">
+      <string>Time in 2D model</string>
+     </property>
      <property name="readOnly">
       <bool>true</bool>
      </property>
